--- a/WebMarkupWebsiteOpdrachtP1/History_And_Culture.html
+++ b/WebMarkupWebsiteOpdrachtP1/History_And_Culture.html
@@ -32,77 +32,80 @@
                 <!-- article 1 -->
                 <article>
                     <section class="section_image">
-                        <img id="img_left" src="./img/De-Beijaard-Hoorn.jpg" title="De Beijaard Hoorn" alt="De Beijaard Hoorn">
+                        <img id="img_left" src="./img/Westfries-Museum-Hoorn.jpg" title="Westfries Museum"
+                            alt="Afbeelding WestFries Museum voorkant">
                     </section>
 
                     <section class="section_text">
-                        <h3> De Beiaard </h3>
-                        <p> De Beiaard is een “eet- en bierencafé” aan het Kerkplein in Hoorn. Het is een gezellige plek
-                            die bekend staat om zijn uitgebreide selectie speciaalbieren en heerlijke gerechten.
-                            Bezoekers waarderen de ontspannen sfeer, waar je zowel kunt genieten van een informele
-                            maaltijd als een borrel met vrienden. De combinatie van goede service, smaakvolle gerechten
-                            en een uitnodigende ambiance maakt De Beiaard tot een populaire ontmoetingsplaats in het
-                            hart van de stad.
+                        <h3> Het WestFries Museum </h3>
+                        <p> Het WestFries museum is een museum aan het plein “De rode steen” in het centrum van Hoorn.
+                            In het WestFries museum kan over de interesante geschiedenis lezen en zien van de stad Hoorn
+                            en WestFriesland. Dat kan mede door geweldige mulimediashows, verdiepende podwalks en nog
+                            meer. Dit jaar (2024) kan je tussen 22 juni t/m 3 november meer dan 200 orginele etsen van
+                            Rembrandt. Ben je een Rembrandt liefhebber? Mis deze kans dan niet!
                         </p>
-                        <button> <a href="https://debeiaard-hoorn.nl/"> Bezoek website </a> </button>
+                        <button> <a href="https://westfriesmuseum.nl/"> Bezoek website </a> </button>
                     </section>
                 </article>
 
                 <!-- article 2 -->
                 <article>
                     <section class="section_text">
-                        <h3> Wok van Pejo </h3>
-                        <p> De Wok van Pejo is een populair wokrestaurant in de wijk Zwaag, binnen Hoorn. Het restaurant
-                            biedt een uitgebreide keuze aan gerechten, waaronder diverse voorgerechten, soepen,
-                            barbecue-opties, een sushi-bar, en een warm buffet. Dankzij dit brede aanbod is er voor elke
-                            smaak iets te vinden, waardoor het een ideale plek is voor zowel liefhebbers van Aziatische
-                            gerechten als voor gezinnen of groepen die van variatie houden.
+                        <h3> Park Schouwburg </h3>
+                        <p> Schouwburg Het Park, ook bekend als Park Schouwburg, is een theater gelegen aan de Hoornse
+                            Hop in Hoorn. Het biedt een breed scala aan voorstellingen, zoals toneel, musicals, cabaret,
+                            dans en concerten, en trekt hiermee een divers publiek. Naast voorstellingen worden er ook
+                            regelmatig evenementen en congressen georganiseerd. Met zijn moderne uitstraling en
+                            uitstekende faciliteiten is het een geliefde plek voor culturele activiteiten en speelt het
+                            een belangrijke rol in het culturele leven van Hoorn en omgeving.
                         </p>
-                        <button> <a href="https://www.wokvanpejo.nl/"> Bezoek website </a> </button>
+                        <button> <a href="https://www.hetpark.nl/"> Bezoek website </a> </button>
                     </section>
 
                     <section class="section_image">
-                        <img id="img_right" src="./img/Wok-Van-Pejo-Zwaag.jpg" title="De Beijaard Hoorn" alt="De Beijaard Hoorn">
+                        <img id="img_right" src="./img/Park-Schouwburg-Hoorn.jpg" title="Park schouwburg"
+                            alt="Afbeelding zijkant van Park schouwburg in de avond">
                     </section>
                 </article>
 
                 <!-- article 3 -->
                 <article>
                     <section class="section_image">
-                        <img id="img_left" src="./img/Portofino-Hoorn-2.jpg" title="De Beijaard Hoorn" alt="De Beijaard Hoorn">
+                        <img id="img_left" src="./img/Museum-Van-De-20-Eeuw-Hoorn.webp" title="Museum van de 20ste eeuw"
+                            alt="Afbeelding voorkant van het museum van de 20ste eeuw">
                     </section>
 
                     <section class="section_text">
-                        <h3> Portofino </h3>
-                        <p> Portofino is een Italiaans familierestaurant aan de Nieuwlandstraat in het centrum van
-                            Hoorn. Hier zorgt een team van Nederlanders en Italianen voor menu's vol met authentieke
-                            Italiaanse gerechten. Van klassieke pasta's zoals Carbonara tot versgebakken Focaccia en
-                            heerlijke desserts zoals Torta Limone, er is voor iedere liefhebber van de Italiaanse keuken
-                            iets te vinden. Als je op zoek bent naar een plek om échte Italiaanse smaken te proeven, dan
-                            is Portofino de ideale bestemming!
+                        <h3> Museum van de 20e Eeuw </h3>
+                        <p> Het museum van de 20e Eeuw is een museum die in een voormalige gevangenis in de haven van
+                            Hoorn zit. In het museum kan je zien hoe het leven in de 20ste eeuw uitziet, van oude
+                            interieurs van huizen, voorwerpen van vroeger en nog meer. Bekijk eens hoe een klaslokaal
+                            van vroeger eruit ziet en wat voor voorwerpen zoals speelgoed ze vroeger hadden. Bekijk het
+                            leven van vroeger, de armoede, het lang werken en hoe de woonomstandigheid van vroeger is
+                            veranderd vergeleken met nu.
                         </p>
 
-                        <button> <a href="https://www.portofinodapiero.nl"> Bezoek website </a> </button>
+                        <button> <a href="https://www.museumhoorn.nl/pg-5548-7-7378/pagina/welkom.html"> Bezoek website </a> </button>
                     </section>
                 </article>
-                
+
                 <!-- article 4 -->
                 <article>
                     <section class="section_text">
-                        <h3> Ridderikhoff </h3>
-                        <p> Restaurant Ridderikhoff is een sfeervol restaurant aan het Kerkplein in het historische
-                            centrum van Hoorn. Het biedt een verfijnd menu met Franse en internationale gerechten,
-                            waarbij lokale en seizoensgebonden ingrediënten centraal staan. Of je nu komt voor een
-                            diner, lunch of culinaire proeverij, de gerechten worden met zorg bereid. Het elegante
-                            interieur en de intieme sfeer maken het perfect voor een romantisch diner of speciale
-                            gelegenheid, wat Ridderikhoff een waardevolle aanvulling maakt op het culinaire aanbod van
-                            Hoorn.
+                        <h3> De Halve Maen </h3>
+                        <p> De Halve Maen is een replica van een 17e-eeuws VOC-schip (Verenigde Oostindische Compagnie),
+                            gelegen in de haven van Hoorn. Het varende museum biedt bezoekers de kans om terug in de
+                            tijd te gaan en de maritieme geschiedenis van Nederland te ontdekken. Aan boord leren zij
+                            over de belangrijke rol van de VOC tijdens de Gouden Eeuw en het zware leven van zeelieden
+                            op lange, gevaarlijke reizen. De Halve Maen fungeert zo als een levend stuk erfgoed en een
+                            herinnering aan Hoorns rijke verleden.
                         </p>
-                        <button> <a href="https://ridderikhoff.org/"> Bezoek website </a> </button>
+                        <button> <a href="https://halvemaen.nl/"> Bezoek website </a> </button>
                     </section>
 
                     <section class="section_image">
-                        <img id="img_right" src="./img/Ridderikhoff-Hoorn.jpeg" title="De Beijaard Hoorn" alt="De Beijaard Hoorn">
+                        <img id="img_right" src="./img/De-Halve-Maen-Hoorn.jpg" title="De halve maen"
+                            alt="Afbeelding van het schip de halve maen">
                     </section>
                 </article>
 
