verbetering restaurants.html en maken recreation.html

--- a/WebMarkupWebsiteOpdrachtP1/Restaurants.html
+++ b/WebMarkupWebsiteOpdrachtP1/Restaurants.html
@@ -31,7 +31,7 @@
                 <!-- article 1 -->
                 <article>
                     <section class="section_image">
-                        <img id="img_left" src="./img/De-Beijaard-Hoorn.jpg" title="De Beijaard Hoorn" alt="De Beijaard Hoorn">
+                        <img id="img_left" src="./img/De-Beijaard-Hoorn.jpg" title="De Beijaard Hoorn" alt="Afbeelding De Beijaard Hoorn">
                     </section>
 
                     <section class="section_text">
@@ -61,14 +61,14 @@
                     </section>
 
                     <section class="section_image">
-                        <img id="img_right" src="./img/Wok-Van-Pejo-Zwaag.jpg" title="De Beijaard Hoorn" alt="De Beijaard Hoorn">
+                        <img id="img_right" src="./img/Wok-Van-Pejo-Zwaag.jpg" title="Wok van Pejo" alt="Afbeelding Wok van Pejo binnenkant">
                     </section>
                 </article>
 
                 <!-- article 3 -->
                 <article>
                     <section class="section_image">
-                        <img id="img_left" src="./img/Portofino-Hoorn-2.jpg" title="De Beijaard Hoorn" alt="De Beijaard Hoorn">
+                        <img id="img_left" src="./img/Portofino-Hoorn-2.jpg" title="Portofino Hoorn" alt="Afbeelding Voorkant Portofino">
                     </section>
 
                     <section class="section_text">
@@ -101,7 +101,7 @@
                     </section>
 
                     <section class="section_image">
-                        <img id="img_right" src="./img/Ridderikhoff-Hoorn.jpeg" title="De Beijaard Hoorn" alt="De Beijaard Hoorn">
+                        <img id="img_right" src="./img/Ridderikhoff-Hoorn.jpeg" title="Ridderikhoff Hoorn" alt="Afbeelding Ridderikhoff">
                     </section>
                 </article>
 
