--- a/WebMarkupWebsiteOpdrachtP1/Recreation.html
+++ b/WebMarkupWebsiteOpdrachtP1/Recreation.html
@@ -27,22 +27,24 @@
             </nav>
         </header>
 
+
+        <!-- alt shift f 💖💖💖 -->
         <main>
             <section class="Content_Container">
                 <!-- article 1 -->
                 <article>
                     <section class="section_image">
-                        <img id="img_left" src="./img/Westfries-Museum-Hoorn.jpg" title="Westfries Museum"
-                            alt="Afbeelding WestFries Museum voorkant">
+                        <img id="img_left" src="./img/Jaarmarkt-Blokker.jpg" title="Jaarmarkt Blokker"
+                            alt="Afbeelding kraampjes jaarmarkt Blokker, Hoorn">
                     </section>
 
                     <section class="section_text">
-                        <h3> Het WestFries Museum </h3>
-                        <p> Het WestFries museum is een museum aan het plein “De rode steen” in het centrum van Hoorn.
-                            In het WestFries museum kan over de interesante geschiedenis lezen en zien van de stad Hoorn
-                            en WestFriesland. Dat kan mede door geweldige mulimediashows, verdiepende podwalks en nog
-                            meer. Dit jaar (2024) kan je tussen 22 juni t/m 3 november meer dan 200 orginele etsen van
-                            Rembrandt. Ben je een Rembrandt liefhebber? Mis deze kans dan niet!
+                        <h3> Jaarmarkt Blokker </h3>
+                        <p> Elk jaar is er op de laatste zaterdag van augustus een jaarmarkt in Blokker. Op de jaarmarkt
+                            is een diversie aanbod aan verschillende producten en diensten op de maarliefts 200
+                            verschillende kramen. Op de jaarmarkt is er ook een jeugdrommelmarkt, een brandweer
+                            demonstratie, pony rijden, ballon kunstenaar, springkussen draaimolen en nog meer! Dus er is
+                            altijd wel iets te doen voor jong en oud. Klik hier (link) voor meer informatie
                         </p>
                         <button> <a href="https://westfriesmuseum.nl/"> Bezoek website </a> </button>
                     </section>
@@ -51,64 +53,47 @@
                 <!-- article 2 -->
                 <article>
                     <section class="section_text">
-                        <h3> Park Schouwburg </h3>
-                        <p> Schouwburg Het Park, ook bekend als Park Schouwburg, is een theater gelegen aan de Hoornse
-                            Hop in Hoorn. Het biedt een breed scala aan voorstellingen, zoals toneel, musicals, cabaret,
-                            dans en concerten, en trekt hiermee een divers publiek. Naast voorstellingen worden er ook
-                            regelmatig evenementen en congressen georganiseerd. Met zijn moderne uitstraling en
-                            uitstekende faciliteiten is het een geliefde plek voor culturele activiteiten en speelt het
-                            een belangrijke rol in het culturele leven van Hoorn en omgeving.
+                        <h3> Kermis Hoorn </h3>
+                        <p> Elkjaar is er in Hoorn een kermis. Dit jaar van zaterdag 10 augustus tot en met maandag 19
+                            augustus is de 578 editie van kermis Hoorn terug met 71
+                            verschillende de attracties. De kermis kan je in de binnenstad van hoorn vinden op de
+                            volgende straten/plekken: Vale Hen (1-11), Breed (12-28), Gedempte Turfhaven (29-43),
+                            Spoorstraat (44-46), Ramen (47), Niewland (48), Gouw(49-57), Nieuwstraat (58-64), Kerkplein
+                            (65-68) en De rode steen (69-71). Op de website(link) van kermis hoorn kan je meer
+                            informatie vinden.
                         </p>
                         <button> <a href="https://www.hetpark.nl/"> Bezoek website </a> </button>
                     </section>
 
                     <section class="section_image">
-                        <img id="img_right" src="./img/Park-Schouwburg-Hoorn.jpg" title="Park schouwburg"
-                            alt="Afbeelding zijkant van Park schouwburg in de avond">
+                        <img id="img_right" src="./img/Kermis-Hoorn.jpg" title="Kermis Hoorn"
+                            alt="Afbeelding attracties kermis Hoorn op de Rode steen">
                     </section>
                 </article>
 
                 <!-- article 3 -->
                 <article>
                     <section class="section_image">
-                        <img id="img_left" src="./img/Museum-Van-De-20-Eeuw-Hoorn.webp" title="Museum van de 20ste eeuw"
-                            alt="Afbeelding voorkant van het museum van de 20ste eeuw">
+                        <img id="img_left" src="./img/Live-In-Hoorn.jpg" title="Live in Hoorn"
+                            alt="Afbeelding binnenkant tent live in Hoorn">
                     </section>
 
                     <section class="section_text">
-                        <h3> Museum van de 20e Eeuw </h3>
-                        <p> Het museum van de 20e Eeuw is een museum die in een voormalige gevangenis in de haven van
-                            Hoorn zit. In het museum kan je zien hoe het leven in de 20ste eeuw uitziet, van oude
-                            interieurs van huizen, voorwerpen van vroeger en nog meer. Bekijk eens hoe een klaslokaal
-                            van vroeger eruit ziet en wat voor voorwerpen zoals speelgoed ze vroeger hadden. Bekijk het
-                            leven van vroeger, de armoede, het lang werken en hoe de woonomstandigheid van vroeger is
-                            veranderd vergeleken met nu.
+                        <h3> Live in Hoorn </h3>
+                        <p> Live in Hoorn is een muzikaal feest dat sinds 2007 onregelmatig wordt gehouden. Het
+                            evenement brengt lokale en regionale artiesten samen, waardoor bezoekers kunnen genieten van
+                            een gevarieerd aanbod aan live muziek, van pop en rock tot jazz. Met een gezellige sfeer is
+                            Live in Hoorn uitgegroeid tot een geliefde gebeurtenis voor muziekliefhebbers en een
+                            levendige ontmoetingsplaats voor de gemeenschap.
                         </p>
 
-                        <button> <a href="https://www.museumhoorn.nl/pg-5548-7-7378/pagina/welkom.html"> Bezoek website </a> </button>
+                        <button> <a href="https://www.museumhoorn.nl/pg-5548-7-7378/pagina/welkom.html"> Bezoek website
+                            </a> </button>
                     </section>
                 </article>
 
                 <!-- article 4 -->
-                <article>
-                    <section class="section_text">
-                        <h3> De Halve Maen </h3>
-                        <p> De Halve Maen is een replica van een 17e-eeuws VOC-schip (Verenigde Oostindische Compagnie),
-                            gelegen in de haven van Hoorn. Het varende museum biedt bezoekers de kans om terug in de
-                            tijd te gaan en de maritieme geschiedenis van Nederland te ontdekken. Aan boord leren zij
-                            over de belangrijke rol van de VOC tijdens de Gouden Eeuw en het zware leven van zeelieden
-                            op lange, gevaarlijke reizen. De Halve Maen fungeert zo als een levend stuk erfgoed en een
-                            herinnering aan Hoorns rijke verleden.
-                        </p>
-                        <button> <a href="https://halvemaen.nl/"> Bezoek website </a> </button>
-                    </section>
-
-                    <section class="section_image">
-                        <img id="img_right" src="./img/De-Halve-Maen-Hoorn.jpg" title="De halve maen"
-                            alt="Afbeelding van het schip de halve maen">
-                    </section>
-                </article>
-
+                <!-- Er bestaad geen article 4 🪦😭 -->
             </section>
         </main>
 
