--- a/WebMarkupWebsiteOpdrachtP1/Recreation.html
+++ b/WebMarkupWebsiteOpdrachtP1/Recreation.html
@@ -46,7 +46,7 @@
                             demonstratie, pony rijden, ballon kunstenaar, springkussen draaimolen en nog meer! Dus er is
                             altijd wel iets te doen voor jong en oud. Klik hier (link) voor meer informatie
                         </p>
-                        <button> <a href="https://westfriesmuseum.nl/"> Bezoek website </a> </button>
+                        <button> <a href="https://www.jaarmarktblokker.nl/"> Bezoek website </a> </button>
                     </section>
                 </article>
 
@@ -62,7 +62,7 @@
                             (65-68) en De rode steen (69-71). Op de website(link) van kermis hoorn kan je meer
                             informatie vinden.
                         </p>
-                        <button> <a href="https://www.hetpark.nl/"> Bezoek website </a> </button>
+                        <button> <a href="https://www.kermis-hoorn.nl/"> Bezoek website </a> </button>
                     </section>
 
                     <section class="section_image">
@@ -87,7 +87,7 @@
                             levendige ontmoetingsplaats voor de gemeenschap.
                         </p>
 
-                        <button> <a href="https://www.museumhoorn.nl/pg-5548-7-7378/pagina/welkom.html"> Bezoek website
+                        <button> <a href="https://www.liveinhoorn.nl/"> Bezoek website
                             </a> </button>
                     </section>
                 </article>
