knop is beter dan tekst

--- a/WebMarkupWebsiteOpdrachtP1/Recreation.html
+++ b/WebMarkupWebsiteOpdrachtP1/Recreation.html
@@ -44,7 +44,7 @@
                             is een diversie aanbod aan verschillende producten en diensten op de maarliefts 200
                             verschillende kramen. Op de jaarmarkt is er ook een jeugdrommelmarkt, een brandweer
                             demonstratie, pony rijden, ballon kunstenaar, springkussen draaimolen en nog meer! Dus er is
-                            altijd wel iets te doen voor jong en oud. Klik hier (link) voor meer informatie
+                            altijd wel iets te doen voor jong en oud.
                         </p>
                         <button> <a href="https://www.jaarmarktblokker.nl/"> Bezoek website </a> </button>
                     </section>
@@ -59,8 +59,7 @@
                             verschillende de attracties. De kermis kan je in de binnenstad van hoorn vinden op de
                             volgende straten/plekken: Vale Hen (1-11), Breed (12-28), Gedempte Turfhaven (29-43),
                             Spoorstraat (44-46), Ramen (47), Niewland (48), Gouw(49-57), Nieuwstraat (58-64), Kerkplein
-                            (65-68) en De rode steen (69-71). Op de website(link) van kermis hoorn kan je meer
-                            informatie vinden.
+                            (65-68) en De rode steen (69-71).
                         </p>
                         <button> <a href="https://www.kermis-hoorn.nl/"> Bezoek website </a> </button>
                     </section>
