copy paste css, text

--- a/WebMarkupWebsiteOpdrachtP1/Recreation.html
+++ b/WebMarkupWebsiteOpdrachtP1/Recreation.html
@@ -86,8 +86,7 @@
                             levendige ontmoetingsplaats voor de gemeenschap.
                         </p>
 
-                        <button> <a href="https://www.liveinhoorn.nl/"> Bezoek website
-                            </a> </button>
+                        <button> <a href="https://www.liveinhoorn.nl/"> Bezoek website </a> </button>
                     </section>
                 </article>
 
