--- a/WebMarkupWebsiteOpdrachtP1/index.html
+++ b/WebMarkupWebsiteOpdrachtP1/index.html
@@ -1,6 +1,7 @@
 <DOCTYPE html!>
     <html>
         <head> 
+            <!-- werk ik wel? -->
             <meta http-equiv="refresh" content="0; url=Home_Page.html">       
         </head>
     </html>
