--- a/WebMarkupWebsiteOpdrachtP1/Events.html
+++ b/WebMarkupWebsiteOpdrachtP1/Events.html
@@ -32,77 +32,81 @@
                 <!-- article 1 -->
                 <article>
                     <section class="section_image">
-                        <img id="img_left" src="./img/De-Beijaard-Hoorn.jpg" title="De Beijaard Hoorn" alt="De Beijaard Hoorn">
+                        <img id="img_left" src="./img/Vue-Hoorn.jpg" title="Vue Hoorn"
+                            alt="Afbeelding ingang Vue Hoorn">
                     </section>
 
                     <section class="section_text">
-                        <h3> De Beiaard </h3>
-                        <p> De Beiaard is een “eet- en bierencafé” aan het Kerkplein in Hoorn. Het is een gezellige plek
-                            die bekend staat om zijn uitgebreide selectie speciaalbieren en heerlijke gerechten.
-                            Bezoekers waarderen de ontspannen sfeer, waar je zowel kunt genieten van een informele
-                            maaltijd als een borrel met vrienden. De combinatie van goede service, smaakvolle gerechten
-                            en een uitnodigende ambiance maakt De Beiaard tot een populaire ontmoetingsplaats in het
-                            hart van de stad.
+                        <h3> Vue Hoorn </h3>
+                        <p> Heb je zin om films op het grote scherm te bekijken? Dan is Vue Hoorn de ideale plek voor
+                            jou! Gelegen naast de A7, aan de rand van Hoorn, en direct naast het Van der Valk Hotel, kun
+                            je hier de nieuwste blockbusters beleven. De bioscoop biedt zowel 2D- als 3D-voorstellingen,
+                            waardoor je kunt genieten van films met indrukwekkende beelden en een geweldige sfeer. Met
+                            comfortabele zitplaatsen en moderne technologie is Vue Hoorn dé plek voor een complete
+                            filmervaring.
                         </p>
-                        <button> <a href="https://debeiaard-hoorn.nl/"> Bezoek website </a> </button>
+                        <button> <a href="https://www.vuecinemas.nl/vue-cinemas/hoorn"> Bezoek website </a> </button>
                     </section>
                 </article>
 
                 <!-- article 2 -->
                 <article>
                     <section class="section_text">
-                        <h3> Wok van Pejo </h3>
-                        <p> De Wok van Pejo is een populair wokrestaurant in de wijk Zwaag, binnen Hoorn. Het restaurant
-                            biedt een uitgebreide keuze aan gerechten, waaronder diverse voorgerechten, soepen,
-                            barbecue-opties, een sushi-bar, en een warm buffet. Dankzij dit brede aanbod is er voor elke
-                            smaak iets te vinden, waardoor het een ideale plek is voor zowel liefhebbers van Aziatische
-                            gerechten als voor gezinnen of groepen die van variatie houden.
+                        <h3> De Waterhoorn </h3>
+                        <p> Heeft u zin om te gaan zwemmen, maar wilt u niet wachten tot het warmer wordt? Dan is de
+                            Waterhoorn de perfecte plek voor u! Dit overdekte zwembad in Hoorn biedt het hele jaar door
+                            de mogelijkheid om te zwemmen in een comfortabele omgeving. Met verschillende zwembaden,
+                            glijbanen en wellnessfaciliteiten is de Waterhoorn ideaal voor gezinnen, zwemliefhebbers en
+                            iedereen die wil genieten van een verfrissende duik, ongeacht het seizoen.
                         </p>
-                        <button> <a href="https://www.wokvanpejo.nl/"> Bezoek website </a> </button>
+                        <button> <a href="https://www.optisport.nl/zwembad-de-waterhoorn-hoorn"> Bezoek website </a> </button>
                     </section>
 
                     <section class="section_image">
-                        <img id="img_right" src="./img/Wok-Van-Pejo-Zwaag.jpg" title="De Beijaard Hoorn" alt="De Beijaard Hoorn">
+                        <img id="img_right" src="./img/De-Water-Hoorn.jpg" title="De Water Hoorn"
+                            alt="Afbeelding deel zwembad van de Water Hoorn">
                     </section>
                 </article>
 
                 <!-- article 3 -->
                 <article>
                     <section class="section_image">
-                        <img id="img_left" src="./img/Portofino-Hoorn-2.jpg" title="De Beijaard Hoorn" alt="De Beijaard Hoorn">
+                        <img id="img_left" src="./img/Sportcentrum-Hoorn.jpg" title="Sportcentrum Hoorn"
+                            alt="Afbeelding binnenbanen sportcentrum Hoorn">
                     </section>
 
                     <section class="section_text">
-                        <h3> Portofino </h3>
-                        <p> Portofino is een Italiaans familierestaurant aan de Nieuwlandstraat in het centrum van
-                            Hoorn. Hier zorgt een team van Nederlanders en Italianen voor menu's vol met authentieke
-                            Italiaanse gerechten. Van klassieke pasta's zoals Carbonara tot versgebakken Focaccia en
-                            heerlijke desserts zoals Torta Limone, er is voor iedere liefhebber van de Italiaanse keuken
-                            iets te vinden. Als je op zoek bent naar een plek om échte Italiaanse smaken te proeven, dan
-                            is Portofino de ideale bestemming!
+                        <h3> Sportcentrum Hoorn </h3>
+                        <p> Sportcentrum Hoorn is een sportcentrum aan de Holenweg 14a in Hoorn. Het centrum biedt een
+                            breed scala aan sportfaciliteiten, zoals fitness, groepslessen, squashbanen en een sauna.
+                            Zowel beginners als ervaren sporters kunnen hier terecht voor een gevarieerd aanbod aan
+                            activiteiten. Met moderne apparatuur en deskundige begeleiding is Sportcentrum Hoorn de
+                            ideale plek voor iedereen die aan zijn conditie wil werken of wil ontspannen na een
+                            intensieve training.
                         </p>
 
-                        <button> <a href="https://www.portofinodapiero.nl"> Bezoek website </a> </button>
+                        <button> <a href="https://sportcentrumhoorn.nl/#/"> Bezoek website </a> </button>
                     </section>
                 </article>
-                
+
                 <!-- article 4 -->
                 <article>
                     <section class="section_text">
-                        <h3> Ridderikhoff </h3>
-                        <p> Restaurant Ridderikhoff is een sfeervol restaurant aan het Kerkplein in het historische
-                            centrum van Hoorn. Het biedt een verfijnd menu met Franse en internationale gerechten,
-                            waarbij lokale en seizoensgebonden ingrediënten centraal staan. Of je nu komt voor een
-                            diner, lunch of culinaire proeverij, de gerechten worden met zorg bereid. Het elegante
-                            interieur en de intieme sfeer maken het perfect voor een romantisch diner of speciale
-                            gelegenheid, wat Ridderikhoff een waardevolle aanvulling maakt op het culinaire aanbod van
-                            Hoorn.
+                        <h3> Sam city </h3>
+                        <p>Sam city is een groot indoor sport- en recreatiecentrum in Hoorn, gelegen aan de
+                            Westfrisiaweg. Het biedt een breed scala aan activiteiten voor alle leeftijden, zoals
+                            trampolinespringen, karten, lasergamen en een klimbaan. Het is de perfecte plek voor wie op
+                            zoek is naar avontuur en actie, of het nu gaat om een kinderfeestje, een sportieve dag met
+                            vrienden of familie-uitje. Met verschillende zones en professionele begeleiding is er voor
+                            iedereen wel iets te beleven in Sam City. Het centrum staat bekend om zijn dynamische sfeer
+                            en biedt een onvergetelijke ervaring voor jong en oud.
                         </p>
-                        <button> <a href="https://ridderikhoff.org/"> Bezoek website </a> </button>
+                        <button> <a href="https://samcity.nl/"> Bezoek website </a> </button>
                     </section>
 
                     <section class="section_image">
-                        <img id="img_right" src="./img/Ridderikhoff-Hoorn.jpeg" title="De Beijaard Hoorn" alt="De Beijaard Hoorn">
+                        <img id="img_right" src="./img/Samcity-Hoorn.jpeg" title="Samcity Hoorn"
+                            alt="Afbeelding buitenkant gebouw Samcity">
                     </section>
                 </article>
 
