--- a/WebMarkupWebsiteOpdrachtP1/Events.html
+++ b/WebMarkupWebsiteOpdrachtP1/Events.html
@@ -27,89 +27,70 @@
             </nav>
         </header>
 
-        <main>
+          <!-- alt shift f 💖💖💖 -->
+          <main>
             <section class="Content_Container">
                 <!-- article 1 -->
                 <article>
                     <section class="section_image">
-                        <img id="img_left" src="./img/Vue-Hoorn.jpg" title="Vue Hoorn"
-                            alt="Afbeelding ingang Vue Hoorn">
+                        <img id="img_left" src="./img/Jaarmarkt-Blokker.jpg" title="Jaarmarkt Blokker"
+                            alt="Afbeelding kraampjes jaarmarkt Blokker, Hoorn">
                     </section>
 
                     <section class="section_text">
-                        <h3> Vue Hoorn </h3>
-                        <p> Heb je zin om films op het grote scherm te bekijken? Dan is Vue Hoorn de ideale plek voor
-                            jou! Gelegen naast de A7, aan de rand van Hoorn, en direct naast het Van der Valk Hotel, kun
-                            je hier de nieuwste blockbusters beleven. De bioscoop biedt zowel 2D- als 3D-voorstellingen,
-                            waardoor je kunt genieten van films met indrukwekkende beelden en een geweldige sfeer. Met
-                            comfortabele zitplaatsen en moderne technologie is Vue Hoorn dé plek voor een complete
-                            filmervaring.
+                        <h3> Jaarmarkt Blokker </h3>
+                        <p> Elk jaar is er op de laatste zaterdag van augustus een jaarmarkt in Blokker. Op de jaarmarkt
+                            is een diversie aanbod aan verschillende producten en diensten op de maarliefts 200
+                            verschillende kramen. Op de jaarmarkt is er ook een jeugdrommelmarkt, een brandweer
+                            demonstratie, pony rijden, ballon kunstenaar, springkussen draaimolen en nog meer! Dus er is
+                            altijd wel iets te doen voor jong en oud.
                         </p>
-                        <button> <a href="https://www.vuecinemas.nl/vue-cinemas/hoorn"> Bezoek website </a> </button>
+                        <button> <a href="https://www.jaarmarktblokker.nl/"> Bezoek website </a> </button>
                     </section>
                 </article>
 
                 <!-- article 2 -->
                 <article>
                     <section class="section_text">
-                        <h3> De Waterhoorn </h3>
-                        <p> Heeft u zin om te gaan zwemmen, maar wilt u niet wachten tot het warmer wordt? Dan is de
-                            Waterhoorn de perfecte plek voor u! Dit overdekte zwembad in Hoorn biedt het hele jaar door
-                            de mogelijkheid om te zwemmen in een comfortabele omgeving. Met verschillende zwembaden,
-                            glijbanen en wellnessfaciliteiten is de Waterhoorn ideaal voor gezinnen, zwemliefhebbers en
-                            iedereen die wil genieten van een verfrissende duik, ongeacht het seizoen.
+                        <h3> Kermis Hoorn </h3>
+                        <p> Elkjaar is er in Hoorn een kermis. Dit jaar van zaterdag 10 augustus tot en met maandag 19
+                            augustus is de 578 editie van kermis Hoorn terug met 71
+                            verschillende de attracties. De kermis kan je in de binnenstad van hoorn vinden op de
+                            volgende straten/plekken: Vale Hen (1-11), Breed (12-28), Gedempte Turfhaven (29-43),
+                            Spoorstraat (44-46), Ramen (47), Niewland (48), Gouw(49-57), Nieuwstraat (58-64), Kerkplein
+                            (65-68) en De rode steen (69-71).
                         </p>
-                        <button> <a href="https://www.optisport.nl/zwembad-de-waterhoorn-hoorn"> Bezoek website </a> </button>
+                        <button> <a href="https://www.kermis-hoorn.nl/"> Bezoek website </a> </button>
                     </section>
 
                     <section class="section_image">
-                        <img id="img_right" src="./img/De-Water-Hoorn.jpg" title="De Water Hoorn"
-                            alt="Afbeelding deel zwembad van de Water Hoorn">
+                        <img id="img_right" src="./img/Kermis-Hoorn.jpg" title="Kermis Hoorn"
+                            alt="Afbeelding attracties kermis Hoorn op de Rode steen">
                     </section>
                 </article>
 
                 <!-- article 3 -->
                 <article>
                     <section class="section_image">
-                        <img id="img_left" src="./img/Sportcentrum-Hoorn.jpg" title="Sportcentrum Hoorn"
-                            alt="Afbeelding binnenbanen sportcentrum Hoorn">
+                        <img id="img_left" src="./img/Live-In-Hoorn.jpg" title="Live in Hoorn"
+                            alt="Afbeelding binnenkant tent live in Hoorn">
                     </section>
 
                     <section class="section_text">
-                        <h3> Sportcentrum Hoorn </h3>
-                        <p> Sportcentrum Hoorn is een sportcentrum aan de Holenweg 14a in Hoorn. Het centrum biedt een
-                            breed scala aan sportfaciliteiten, zoals fitness, groepslessen, squashbanen en een sauna.
-                            Zowel beginners als ervaren sporters kunnen hier terecht voor een gevarieerd aanbod aan
-                            activiteiten. Met moderne apparatuur en deskundige begeleiding is Sportcentrum Hoorn de
-                            ideale plek voor iedereen die aan zijn conditie wil werken of wil ontspannen na een
-                            intensieve training.
+                        <h3> Live in Hoorn </h3>
+                        <p> Live in Hoorn is een muzikaal feest dat sinds 2007 onregelmatig wordt gehouden. Het
+                            evenement brengt lokale en regionale artiesten samen, waardoor bezoekers kunnen genieten van
+                            een gevarieerd aanbod aan live muziek, van pop en rock tot jazz. Met een gezellige sfeer is
+                            Live in Hoorn uitgegroeid tot een geliefde gebeurtenis voor muziekliefhebbers en een
+                            levendige ontmoetingsplaats voor de gemeenschap.
                         </p>
 
-                        <button> <a href="https://sportcentrumhoorn.nl/#/"> Bezoek website </a> </button>
+                        <button> <a href="https://www.liveinhoorn.nl/"> Bezoek website </a> </button>
                     </section>
                 </article>
 
                 <!-- article 4 -->
-                <article>
-                    <section class="section_text">
-                        <h3> Sam city </h3>
-                        <p>Sam city is een groot indoor sport- en recreatiecentrum in Hoorn, gelegen aan de
-                            Westfrisiaweg. Het biedt een breed scala aan activiteiten voor alle leeftijden, zoals
-                            trampolinespringen, karten, lasergamen en een klimbaan. Het is de perfecte plek voor wie op
-                            zoek is naar avontuur en actie, of het nu gaat om een kinderfeestje, een sportieve dag met
-                            vrienden of familie-uitje. Met verschillende zones en professionele begeleiding is er voor
-                            iedereen wel iets te beleven in Sam City. Het centrum staat bekend om zijn dynamische sfeer
-                            en biedt een onvergetelijke ervaring voor jong en oud.
-                        </p>
-                        <button> <a href="https://samcity.nl/"> Bezoek website </a> </button>
-                    </section>
-
-                    <section class="section_image">
-                        <img id="img_right" src="./img/Samcity-Hoorn.jpeg" title="Samcity Hoorn"
-                            alt="Afbeelding buitenkant gebouw Samcity">
-                    </section>
-                </article>
-
+                <!-- Er bestaad geen article 4 🪦😭 -->
             </section>
         </main>
 
