--- a/WebMarkupWebsiteOpdrachtP1/Contact_Page.html
+++ b/WebMarkupWebsiteOpdrachtP1/Contact_Page.html
@@ -38,6 +38,7 @@
                  
                     <p> <em> Velden met een <strong> * </strong> zijn verplicht </em> </p>
                     <form>
+                        <legend>
                         <label id="salutation" for="salutation"> Aanhef <strong> * </strong> </label>
                         <select>
                             <option value="Dhr"> Dhr </option>
@@ -64,6 +65,7 @@
                         <textarea id="message" name="message" rows="3" cols="20"> Bericht </textarea>
 
                         <button type="submit"> Verstuur! </button>
+                    </legend>
 
                     </form>
                 </article>
