--- a/WebMarkupWebsiteOpdrachtP1/Home_Page.html
+++ b/WebMarkupWebsiteOpdrachtP1/Home_Page.html
@@ -6,6 +6,7 @@
         <meta author="Nhat Nguyen" />
         <link rel="stylesheet" href="./css/Home_Page.css" />
         <link rel="stylesheet" href="./css/MainStyleFile.css" />
+        <link rel="icon" type="image/x-icon" href="./img/Favicon.png">
 
     </head>
 
