--- a/WebMarkupWebsiteOpdrachtP1/Contact_Page.html
+++ b/WebMarkupWebsiteOpdrachtP1/Contact_Page.html
@@ -62,7 +62,7 @@
                         <input type="number" id="pnumber" name="pnumber" value="1234567890">
 
                         <label for="message"> Bericht </label>
-                        <textarea id="message" name="message" rows="3" cols="20"> Bericht </textarea>
+                        <input type="submit" id="message" name="message" value="Bericht"> </input>
 
                         <button type="submit"> Verstuur! </button>
                     </legend>
