--- a/WebMarkupWebsiteOpdrachtP1/Contact_Page.html
+++ b/WebMarkupWebsiteOpdrachtP1/Contact_Page.html
@@ -62,9 +62,9 @@
                         <input type="number" id="pnumber" name="pnumber" value="1234567890">
 
                         <label for="message"> Bericht </label>
-                        <input type="submit" id="message" name="message" value="Bericht"> </input>
+                        <textarea id="message" name="message" rows="3" cols="20"> Bericht </textarea>
 
-                        <button type="submit"> Verstuur! </button>
+                        <input type="submit" id="submit" value="submit">
                     </legend>
 
                     </form>
