--- a/WebMarkupWebsiteOpdrachtP1/Contact_Page.html
+++ b/WebMarkupWebsiteOpdrachtP1/Contact_Page.html
@@ -38,7 +38,8 @@
 
                     <p> <em> Velden met een <strong> * </strong> zijn verplicht </em> </p>
                     <form>
-                        <legend>
+                        <fieldset> 
+                        <legend> Contact Form </fieldset>
                             <label id="salutation" for="salutation"> Aanhef <strong> * </strong> </label>
                             <select>
                                 <option value="Dhr"> Dhr </option>
@@ -66,6 +67,7 @@
 
                             <input type="submit" id="submit" value="submit">
                         </legend>
+                       
 
                     </form>
                 </article>
