--- a/WebMarkupWebsiteOpdrachtP1/Contact_Page.html
+++ b/WebMarkupWebsiteOpdrachtP1/Contact_Page.html
@@ -40,6 +40,7 @@
                     <form>
                         <fieldset> 
                         <legend> Contact Form </fieldset>
+                            <table>
                             <label id="salutation" for="salutation"> Aanhef <strong> * </strong> </label>
                             <select>
                                 <option value="Dhr"> Dhr </option>
@@ -66,6 +67,7 @@
                             <textarea id="message" name="message" rows="3" cols="20"> Bericht </textarea>
 
                             <input type="submit" id="submit" value="submit">
+                            </table>
                         </legend>
                        
 
