--- a/WebMarkupWebsiteOpdrachtP1/Contact_Page.html
+++ b/WebMarkupWebsiteOpdrachtP1/Contact_Page.html
@@ -41,12 +41,14 @@
                         <fieldset> 
                         <legend> Contact Form </fieldset>
                             <table>
-                            <label id="salutation" for="salutation"> Aanhef <strong> * </strong> </label>
-                            <select>
+                                <tr> 
+                            <td> <label id="salutation" for="salutation"> Aanhef <strong> * </strong> </label> </td> 
+                            <td> <select>
                                 <option value="Dhr"> Dhr </option>
                                 <option value="Mevr"> Mevr </option>
                                 <option value="Nothing"> Wil ik niet zeggen</option>
-                            </select>
+                            </td> </select>
+                        </tr>
 
                             <label for="infix"> Tussen Voegsel </label>
                             <input type="text" id="infix" name="infix" value="Tussen Voegsel">
