--- a/WebMarkupWebsiteOpdrachtP1/Contact_Page.html
+++ b/WebMarkupWebsiteOpdrachtP1/Contact_Page.html
@@ -50,8 +50,10 @@
                             </td> </select>
                         </tr>
 
-                            <label for="infix"> Tussen Voegsel </label>
-                            <input type="text" id="infix" name="infix" value="Tussen Voegsel">
+                        <tr>
+                            <td> <label for="infix"> Tussen Voegsel </label>  </td>
+                            <td> <input type="text" id="infix" name="infix" value="Tussen Voegsel"> </td>
+                        </tr>
 
                             <label for="name"> Naam <strong> * </strong> </label>
                             <input type="text" id="Fname" name="Fname" value="Naam">
