--- a/WebMarkupWebsiteOpdrachtP1/Contact_Page.html
+++ b/WebMarkupWebsiteOpdrachtP1/Contact_Page.html
@@ -39,7 +39,7 @@
                     <p> <em> Velden met een <strong> * </strong> zijn verplicht </em> </p>
                     <form>
                         <fieldset>
-                            <legend> Contact Form
+                            <legend> Contact Form </legend>
                         </fieldset>
                         <table>
                             <tr>
@@ -52,7 +52,7 @@
                                     </select>
                                 </td>
                             </tr>
-                            
+
                             <tr>
                                 <td> <label for="infix"> Tussen Voegsel </label> </td>
                                 <td> <input type="text" id="infix" name="infix" value="Tussen Voegsel"> </td>
