--- a/WebMarkupWebsiteOpdrachtP1/Restaurants.html
+++ b/WebMarkupWebsiteOpdrachtP1/Restaurants.html
@@ -4,8 +4,9 @@
     <head>
         <meta charset="utf-8" />
         <meta author="Nhat Nguyen" />
-        <link rel="stylesheet" href=".\.\.\.\css\Restaurants.css" />
-        <link rel="stylesheet" href=".\.\.\.\css\MainStyleFile.css" />
+        <link rel="stylesheet" href="./css/Restaurants.css" />
+        <link rel="stylesheet" href="./css/MainStyleFile.css" />
+        <link rel="icon" type="image/x-icon" href="./img/Favicon.png">
 
     </head>
 
