--- a/WebMarkupWebsiteOpdrachtP1/Restaurants.html
+++ b/WebMarkupWebsiteOpdrachtP1/Restaurants.html
@@ -32,7 +32,10 @@
                 <!-- article 1 -->
                 <article>
                     <section class="section_image">
+                        <figure>
                         <img id="img_left" src="./img/De-Beijaard-Hoorn.jpg" title="De Beijaard Hoorn" alt="Afbeelding De Beijaard Hoorn">
+                        <figcaption> De Beijaard, Hoorn </figcaption>
+                        </figure>
                     </section>
 
                     <section class="section_text">
@@ -62,14 +65,20 @@
                     </section>
 
                     <section class="section_image">
+                        <figure> 
                         <img id="img_right" src="./img/Wok-Van-Pejo-Zwaag.jpg" title="Wok van Pejo" alt="Afbeelding Wok van Pejo binnenkant">
+                        <figcaption> Wok van Pejo, Zwaag </figcaption>
+                    </figure>
                     </section>
                 </article>
 
                 <!-- article 3 -->
                 <article>
                     <section class="section_image">
-                        <img id="img_left" src="./img/Portofino-Hoorn-2.jpg" title="Portofino Hoorn" alt="Afbeelding Voorkant Portofino">
+                        <figure> 
+                            <img id="img_left" src="./img/Portofino-Hoorn-2.jpg" title="Portofino Hoorn" alt="Afbeelding Voorkant Portofino">
+                            <figcaption> Portofino, Hoorn </figcaption>
+                        </figure>
                     </section>
 
                     <section class="section_text">
@@ -102,7 +111,10 @@
                     </section>
 
                     <section class="section_image">
-                        <img id="img_right" src="./img/Ridderikhoff-Hoorn.jpeg" title="Ridderikhoff Hoorn" alt="Afbeelding Ridderikhoff">
+                        <figure> 
+                            <img id="img_right" src="./img/Ridderikhoff-Hoorn.jpeg" title="Ridderikhoff Hoorn" alt="Afbeelding Ridderikhoff">
+                            <figcaption> Ridderikhoff, Hoorn </figcaption>
+                        </figure>
                     </section>
                 </article>
 
