--- a/WebMarkupWebsiteOpdrachtP1/Restaurants.html
+++ b/WebMarkupWebsiteOpdrachtP1/Restaurants.html
@@ -5,8 +5,8 @@
         <meta charset="utf-8" />
         <meta author="Nhat Nguyen" />
         <link rel="stylesheet" href="./css/Restaurants.css" />
-        <link rel="stylesheet" href="./css/MainStyleFile.css" />
-           <link rel="icon" type="image/x-icon" href="./img/Favicon.png">
+        <link rel="stylesheet" href="./css\MainStyleFile.css" />
+        <link rel="icon" type="image/x-icon" href="./img/favicon-16x16.png">
 
     </head>
 
