--- a/WebMarkupWebsiteOpdrachtP1/Events.html
+++ b/WebMarkupWebsiteOpdrachtP1/Events.html
@@ -6,9 +6,7 @@
         <meta author="Nhat Nguyen" />
         <link rel="stylesheet" href="./css/Events.css" />
         <link rel="stylesheet" href="./css/MainStyleFile.css" />
-        <link rel="icon" type="image/x-icon" href="./img/Favicon.png">
-
-
+        <link rel="icon" type="image/x-icon" href="./img/favicon-16x16.png">
     </head>
 
     <body>
