--- a/WebMarkupWebsiteOpdrachtP1/Contact_Page.html
+++ b/WebMarkupWebsiteOpdrachtP1/Contact_Page.html
@@ -6,7 +6,7 @@
         <meta author="Nhat Nguyen" />
         <link rel="stylesheet" href="./css/Contact_Page.css" />
         <link rel="stylesheet" href="./css/MainStyleFile.css" />
-        <link rel="icon" type="image/x-icon" href="./img/favicon-16x16.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     </head>
 
     <body>
