--- a/WebMarkupWebsiteOpdrachtP1/Home_Page.html
+++ b/WebMarkupWebsiteOpdrachtP1/Home_Page.html
@@ -28,8 +28,12 @@
 
         <main>
             <section id="Hero_Place">
+                <figure> 
                 <img id="Hero_Website" src="./img/Hoorn-Hero-V2.jpg" title="View Hoorn Hero"
                     alt="afbeelding Hoorn hero">
+                    <figcaption> Een deel van de haven Van Hoorn </figcaption>
+                </figure>
+                
                 <section class="Hero_Text">
                     <h1> View Hoorn </h1>
                     <h2> Bekijk wat je kan doen in Hoorn </h2>
