--- a/WebMarkupWebsiteOpdrachtP1/Home_Page.html
+++ b/WebMarkupWebsiteOpdrachtP1/Home_Page.html
@@ -6,7 +6,8 @@
         <meta author="Nhat Nguyen" />
         <link rel="stylesheet" href="./css/Home_Page.css" />
         <link rel="stylesheet" href="./css/MainStyleFile.css" />
-        <link rel="icon" type="image/x-icon" href="./img/favicon-16x16.png">
+        <link rel="icon" type="image/x-icon" href="./img/favicon-16x16.ico">
+        <link rel="icon" type="image/x-icon" href="./img/favicon-32x32.ico">
     </head>
 
     <body>
@@ -33,7 +34,7 @@
                     alt="afbeelding Hoorn hero">
                     <figcaption> Een deel van de haven Van Hoorn </figcaption>
                 </figure>
-                
+
                 <section class="Hero_Text">
                     <h1> View Hoorn </h1>
                     <h2> Bekijk wat je kan doen in Hoorn </h2>
